# MCPPPP

./: .clang-tidy  .gitattributes  .gitignore  .lgtm.yml  CMakeLists.txt  CONFIG.md  GUI.md  MCPPPP-linux  MCPPPP-linux-gui  MCPPPP-linux.out  MCPPPP-mac  MCPPPP-web.js  MCPPPP-web.wasm  MCPPPP-web.worker.js  MCPPPP.sln  MCPPPP.vcxproj.filters  README.md  SECURITY.md  Source.cpp  build.gradle  cim.cpp  cim.h  coi-serviceworker.js  fl_impl.h  fltk.lib  fsb.cpp  fsb.h  gradle.properties  gui.cpp  gui.h  index.html  jni.cpp  libmcpppp.dylib  lodepng.cpp  log.txt  mcpppp.cxx  mcpppp.h  utility.cpp  utility.h  vmt.cpp  (+1 more)
.clusterfuzzlite/: Dockerfile  build.sh
.github/: codeql-config.yml  sync.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  gui_bug_report.md
.github/workflows/: Build.yml  analysis.yml  build.yml  buildjava.yml  compile.yml  compilejava.yml  compilelinux.yml  compilemac.yml  compilemacsync.yml  jnilinux.yml  jnimac.yml  jniwindows.yml  publishmodrinth.yml  sync.yml  syncthing.yml
FL/: Fl.H
MCPPPP/: MCPPPP.vcxproj  Source.cpp
MCPPPP/Zippy/miniz/: ChangeLog.md
Zippy/: ZipArchive.hpp  frontpage.md
Zippy/miniz/: miniz.h
artifacts/: MCPPPP-web.js  MCPPPP-web.wasm  MCPPPP-web.worker.js
include/: Zippy.hpp  microtar.h
include/FL/: Fl.H
include/Zippy/: ZipArchive.hpp
include/Zippy/miniz/: CMakeLists.txt  miniz.h
include/argparse/: argparse.hpp
lib/fltk/fltk-1.3.6/CMake/: export.cmake  options.cmake
src/: Source.cpp  cim.cpp  cim.h  constants.h  convert.h  em_impl.cpp  fl_impl.cpp  fl_impl.h  fsb.cpp  fsb.h  gui.cpp  gui.h  jni.cpp  lodepng.cpp  mcpppp.cxx  mcpppp.h  mcpppp_fluid.cpp  microtar.cpp  pch.h  reselect.h  supsm_mcpppp_jni.h  template.html  utility.cpp  utility.h  vmt.cpp  vmt.h
src/main/java/supsm/mcpppp/: mcpppp.java
src/main/java/supsm/mcpppp/mixin/: ExampleMixin.java
src/main/resources/: MCPPPP-linux  MCPPPP-mac-cli  fabric.mod.json  gradle.properties  libmcpppp.dylib
